fixed white space in jumbotron
fixed whitespace on sides of jumbotron in index.php

--- a/post-it/css/styles.css
+++ b/post-it/css/styles.css
@@ -47,6 +47,10 @@ body.modal-open div.modal-backdrop {
 body {
 	font-family: 'Indie Flower', cursive;
 }
+.jumbotron {
+	margin: 0;
+	padding: 0;
+}
 .postit {
 	margin: 20px;
 	width: 300px;
